# flip7-digital

./: .gitignore  CLAUDE.md  Makefile  Plan De Travail — Flip7 Mvp (attaque Rapide).md  README.md
.github/workflows/: ci-rn.yml  ci-rust.yml
app/: package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx
docs/: arch.md
rust/cli/: Cargo.toml  game_state.json
rust/cli/src/: main.rs
rust/game_core/: Cargo.toml
rust/game_core/src/: ffi_test.rs  lib.rs  main.rs
rust/net/: Cargo.toml
rust/net/src/: lib.rs
