[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
game_core = { path = "../game_core" }

[lib]
crate-type = ["cdylib", "rlib"]